--- a/people.html
+++ b/people.html
@@ -49,8 +49,7 @@
             <div class="person seattle">
                 <img src="images/people/NancyOrgan.png">
                 <div class="bio">
-                    <div class="name">Nancy Organ </br>
-                        Founder and Seattle Organizer</div>
+                    <div class="name">Nancy Organ </br>Founder and Seattle Organizer</div>
                         <div class="portfolio"><a href="www.nancyorgan.com">www.nancyorgan.com</a></div><br>
                     Nancy started DVJS in June 2016 to create a space for the nascent data vis commuity to come
                     together. She studied Statistics and Biology at UC Berkeley and started her career in Medical
@@ -146,7 +145,8 @@
             <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
-                    <div class="name">Member</div><br>
+                    <div class="name">Member</div>
+                    <div class="portfolio"><a href="https://www.meetup.com/data-viz-jam-sessions">Your Portfolio</a></div><br>
                     <div class="en">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit,
                         sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
