adding Matthew Oldach

--- a/people.html
+++ b/people.html
@@ -154,6 +154,22 @@
             </div>
 
             <div class='person'>
+                <img src="images/people/MatthewOldach.png">
+                <div class="bio">
+                    <div class="name">Matthew Oldach</div>
+                    <div class="portfolio">
+                        <a href="https://moldach.github.io/">moldach.github.io/</a>
+                    </div>
+                    <br>
+                    <div class="en">
+                        Matthew has 7 years experience in Data Science and works full-time as a research software engineer at McGill. In his spare-time he works as consultant automating boring processes in the cloud (think excel spreadsheets and emails) and designing visualization solutions to immediately spot trends, track goal achievements, easily identify outliers and compare performance across different categories, products, brands, etc. Some of his recent work is developing the vapoRwave R package and the hinuhinu Shiny application.
+                    </div>
+                    <div class="fr">
+                    </div>
+                </div>
+            </div>
+
+            <!-- <div class='person'>
                 <img src="images/penguin.png">
                 <div class="bio">
                     <div class="name">Member</div>
@@ -171,7 +187,7 @@
                         laboris nisi ut aliquip ex ea commodo consequat.
                     </div>
                 </div>
-            </div>
+            </div> -->
 
         </div>
     </div>
