adding Matthew's links

--- a/people.html
+++ b/people.html
@@ -163,6 +163,9 @@
                     <br>
                     <div class="en">
                         Matthew has 7 years experience in Data Science and works full-time as a research software engineer at McGill. In his spare-time he works as consultant automating boring processes in the cloud (think excel spreadsheets and emails) and designing visualization solutions to immediately spot trends, track goal achievements, easily identify outliers and compare performance across different categories, products, brands, etc. Some of his recent work is developing the vapoRwave R package and the hinuhinu Shiny application.
+                        <br><br>
+                        <a href="https://matthew-j-oldach.shinyapps.io/hinuhinu">Shiny Application</a><br>
+                        <a href="hhttps://moldach.github.io/post/faststyletransfer/">Using TensorFlow to “paint” videos like famous paintings</a>
                     </div>
                     <div class="fr">
                     </div>
